<resources>
    <string name="app_name">Books</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_password_field">Password</string>
    <string name="hint_email_field">Email</string>
    <string name="title_text_field">Books</string>
    <string name="text_button_enter">Entrar</string>
    <string name="text_txt_error">Email e/ou senha incorretos</string>
    <string name="hint_book_search_icon">Pesquisar</string>
    <string name="text_not_found_search_book">Não encontramos nenhum\nLivro com esses termos</string>
</resources>