<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_book_list"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.BookListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:drawableStart="@drawable/ic_ioasys"
        android:drawablePadding="16sp"
        android:drawableTint="@color/black"
        android:gravity="center"
        android:text="@string/title_text_field"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_log_out"
        app:layout_constraintBottom_toBottomOf="@id/txtLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtLabel" />

    <com.example.books.presentation.ui.custom_views.CustomSearchInput
        android:id="@+id/edSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:custom_hint="@string/hint_book_search_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBooks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edSearch"
        tools:listitem="@layout/book_item" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmptyList"
        style="@style/ListEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_not_found_search_book"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvBooks"
        app:layout_constraintVertical_bias="0.25"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>